SimpleScript.output
Grammar

    0 $accept: program $end

    1 program: statements_list
    2        | %empty

    3 statements_list: statements_list statement
    4                | statement

    5 statement: expression_statement
    6          | variable_declaration_statement
    7          | function_declaration_statement
    8          | return_statement
    9          | iteration_statement
   10          | conditional_statement

   11 expression_statement: assignment_expression
   12                     | operation_expression

   13 assignment_expression: identifier "=" operation_expression
   14                      | identifier "=" function_declaration_statement
   15                      | identifier "=" object_literal

   16 object_literal: "{" properties_names_and_values "}"

   17 properties_names_and_values: %empty
   18                            | properties_names_and_values "," property_name_and_value
   19                            | property_name_and_value

   20 property_name_and_value: "IDENTIFIER" ":" operation_expression
   21                        | "IDENTIFIER" ":" function_declaration_statement
   22                        | "IDENTIFIER" ":" object_literal

   23 operation_expression: OPEN_PARENTHESIS operation_expression CLOSE_PARENTHESIS
   24                     | "INTEGER"
   25                     | "FLOAT"
   26                     | "BOOLEAN"
   27                     | "STRING"
   28                     | operation_expression AND operation_expression
   29                     | operation_expression OR operation_expression
   30                     | operation_expression LESS_THAN operation_expression
   31                     | operation_expression LESS_EQUAL_THAN operation_expression
   32                     | operation_expression GREATER_THAN operation_expression
   33                     | operation_expression GREATER_EQUAL_THAN operation_expression
   34                     | operation_expression EQUAL operation_expression
   35                     | operation_expression NOT_EQUAL operation_expression
   36                     | operation_expression PLUS operation_expression
   37                     | operation_expression MINUS operation_expression
   38                     | operation_expression ASTERISK operation_expression
   39                     | operation_expression SLASH operation_expression
   40                     | NOT operation_expression
   41                     | INC operation_expression
   42                     | DEC operation_expression
   43                     | function_call_expression
   44                     | identifier

   45 function_call_expression: identifier OPEN_PARENTHESIS arguments_list CLOSE_PARENTHESIS

   46 arguments_list: %empty
   47               | arguments_list "," argument
   48               | argument

   49 argument: operation_expression

   50 variable_declaration_statement: "var" variable_declaration_list

   51 variable_declaration_list: variable_declaration_list "," variable_declaration
   52                          | variable_declaration

   53 variable_declaration: assignment_expression
   54                     | "IDENTIFIER"

   55 function_declaration_statement: "function" "IDENTIFIER" OPEN_PARENTHESIS parameters_list CLOSE_PARENTHESIS function_body
   56                               | "function" OPEN_PARENTHESIS parameters_list CLOSE_PARENTHESIS function_body

   57 parameters_list: %empty
   58                | parameters_list "," "IDENTIFIER"
   59                | "IDENTIFIER"

   60 function_body: "{" statements_list "}"

   61 return_statement: "return" operation_expression

   62 iteration_statement: "while" OPEN_PARENTHESIS operation_expression CLOSE_PARENTHESIS block

   63 conditional_statement: "if" OPEN_PARENTHESIS operation_expression CLOSE_PARENTHESIS block
   64                      | "if" OPEN_PARENTHESIS operation_expression CLOSE_PARENTHESIS block ELSE block

   65 block: "{" statements_list "}"
   66      | statement

   67 identifier: identifier DOT identifier
   68           | identifier OPEN_BRACKET "INTEGER" CLOSE_BRACKET
   69           | identifier OPEN_BRACKET "STRING" CLOSE_BRACKET
   70           | "IDENTIFIER"


Terminals, with rules where they appear

$end (0) 0
error (256)
"INTEGER" <integerVal> (258) 24 68
"FLOAT" <floatVal> (259) 25
"BOOLEAN" <bool> (260) 26
"STRING" <stringVal> (261) 27 69
"IDENTIFIER" <stringVal> (262) 20 21 22 54 55 58 59 70
"=" (263) 13 14 15
":" (264) 20 21 22
"," (265) 18 47 51 58
"{" (266) 16 60 65
"}" (267) 16 60 65
"if" (268) 63 64
"while" (269) 62
"var" (270) 50
"function" (271) 55 56
"return" (272) 61
NO_ELSE (273)
ELSE (274) 64
AND (275) 28
OR (276) 29
LESS_THAN (277) 30
LESS_EQUAL_THAN (278) 31
GREATER_THAN (279) 32
GREATER_EQUAL_THAN (280) 33
EQUAL (281) 34
NOT_EQUAL (282) 35
PLUS (283) 36
MINUS (284) 37
ASTERISK (285) 38
SLASH (286) 39
INC (287) 41
DEC (288) 42
NOT (289) 40
NO_FUNCTION_CALL (290)
OPEN_PARENTHESIS (291) 23 45 55 56 62 63 64
CLOSE_PARENTHESIS (292) 23 45 55 56 62 63 64
DOT (293) 67
OPEN_BRACKET (294) 68 69
CLOSE_BRACKET (295) 68 69


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
program (42)
    on left: 1 2, on right: 0
statements_list (43)
    on left: 3 4, on right: 1 3 60 65
statement (44)
    on left: 5 6 7 8 9 10, on right: 3 4 66
expression_statement (45)
    on left: 11 12, on right: 5
assignment_expression (46)
    on left: 13 14 15, on right: 11 53
object_literal (47)
    on left: 16, on right: 15 22
properties_names_and_values (48)
    on left: 17 18 19, on right: 16 18
property_name_and_value (49)
    on left: 20 21 22, on right: 18 19
operation_expression (50)
    on left: 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40
    41 42 43 44, on right: 12 13 20 23 28 29 30 31 32 33 34 35 36 37
    38 39 40 41 42 49 61 62 63 64
function_call_expression (51)
    on left: 45, on right: 43
arguments_list (52)
    on left: 46 47 48, on right: 45 47
argument (53)
    on left: 49, on right: 47 48
variable_declaration_statement (54)
    on left: 50, on right: 6
variable_declaration_list (55)
    on left: 51 52, on right: 50 51
variable_declaration (56)
    on left: 53 54, on right: 51 52
function_declaration_statement (57)
    on left: 55 56, on right: 7 14 21
parameters_list (58)
    on left: 57 58 59, on right: 55 56 58
function_body (59)
    on left: 60, on right: 55 56
return_statement (60)
    on left: 61, on right: 8
iteration_statement (61)
    on left: 62, on right: 9
conditional_statement (62)
    on left: 63 64, on right: 10
block (63)
    on left: 65 66, on right: 62 63 64
identifier (64)
    on left: 67 68 69 70, on right: 13 14 15 44 45 67 68 69


State 0

    0 $accept: . program $end
    1 program: . statements_list
    2        | . %empty  [$end]
    3 statements_list: . statements_list statement
    4                | . statement
    5 statement: . expression_statement
    6          | . variable_declaration_statement
    7          | . function_declaration_statement
    8          | . return_statement
    9          | . iteration_statement
   10          | . conditional_statement
   11 expression_statement: . assignment_expression
   12                     | . operation_expression
   13 assignment_expression: . identifier "=" operation_expression
   14                      | . identifier "=" function_declaration_statement
   15                      | . identifier "=" object_literal
   23 operation_expression: . OPEN_PARENTHESIS operation_expression CLOSE_PARENTHESIS
   24                     | . "INTEGER"
   25                     | . "FLOAT"
   26                     | . "BOOLEAN"
   27                     | . "STRING"
   28                     | . operation_expression AND operation_expression
   29                     | . operation_expression OR operation_expression
   30                     | . operation_expression LESS_THAN operation_expression
   31                     | . operation_expression LESS_EQUAL_THAN operation_expression
   32                     | . operation_expression GREATER_THAN operation_expression
   33                     | . operation_expression GREATER_EQUAL_THAN operation_expression
   34                     | . operation_expression EQUAL operation_expression
   35                     | . operation_expression NOT_EQUAL operation_expression
   36                     | . operation_expression PLUS operation_expression
   37                     | . operation_expression MINUS operation_expression
   38                     | . operation_expression ASTERISK operation_expression
   39                     | . operation_expression SLASH operation_expression
   40                     | . NOT operation_expression
   41                     | . INC operation_expression
   42                     | . DEC operation_expression
   43                     | . function_call_expression
   44                     | . identifier
   45 function_call_expression: . identifier OPEN_PARENTHESIS arguments_list CLOSE_PARENTHESIS
   50 variable_declaration_statement: . "var" variable_declaration_list
   55 function_declaration_statement: . "function" "IDENTIFIER" OPEN_PARENTHESIS parameters_list CLOSE_PARENTHESIS function_body
   56                               | . "function" OPEN_PARENTHESIS parameters_list CLOSE_PARENTHESIS function_body
   61 return_statement: . "return" operation_expression
   62 iteration_statement: . "while" OPEN_PARENTHESIS operation_expression CLOSE_PARENTHESIS block
   63 conditional_statement: . "if" OPEN_PARENTHESIS operation_expression CLOSE_PARENTHESIS block
   64                      | . "if" OPEN_PARENTHESIS operation_expression CLOSE_PARENTHESIS block ELSE block
   67 identifier: . identifier DOT identifier
   68           | . identifier OPEN_BRACKET "INTEGER" CLOSE_BRACKET
   69           | . identifier OPEN_BRACKET "STRING" CLOSE_BRACKET
   70           | . "IDENTIFIER"

    "INTEGER"         shift, and go to state 1
    "FLOAT"           shift, and go to state 2
    "BOOLEAN"         shift, and go to state 3
    "STRING"          shift, and go to state 4
    "IDENTIFIER"      shift, and go to state 5
    "if"              shift, and go to state 6
    "while"           shift, and go to state 7
    "var"             shift, and go to state 8
    "function"        shift, and go to state 9
    "return"          shift, and go to state 10
    INC               shift, and go to state 11
    DEC               shift, and go to state 12
    NOT               shift, and go to state 13
    OPEN_PARENTHESIS  shift, and go to state 14

    $default  reduce using rule 2 (program)

    program                         go to state 15
    statements_list                 go to state 16
    statement                       go to state 17
    expression_statement            go to state 18
    assignment_expression           go to state 19
    operation_expression            go to state 20
    function_call_expression        go to state 21
    variable_declaration_statement  go to state 22
    function_declaration_statement  go to state 23
    return_statement                go to state 24
    iteration_statement             go to state 25
    conditional_statement           go to state 26
    identifier                      go to state 27


State 1

   24 operation_expression: "INTEGER" .

    $default  reduce using rule 24 (operation_expression)


State 2

   25 operation_expression: "FLOAT" .

    $default  reduce using rule 25 (operation_expression)


State 3

   26 operation_expression: "BOOLEAN" .

    $default  reduce using rule 26 (operation_expression)


State 4

   27 operation_expression: "STRING" .

    $default  reduce using rule 27 (operation_expression)


State 5

   70 identifier: "IDENTIFIER" .

    $default  reduce using rule 70 (identifier)


State 6

   63 conditional_statement: "if" . OPEN_PARENTHESIS operation_expression CLOSE_PARENTHESIS block
   64                      | "if" . OPEN_PARENTHESIS operation_expression CLOSE_PARENTHESIS block ELSE block

    OPEN_PARENTHESIS  shift, and go to state 28


State 7

   62 iteration_statement: "while" . OPEN_PARENTHESIS operation_expression CLOSE_PARENTHESIS block

    OPEN_PARENTHESIS  shift, and go to state 29


State 8

   13 assignment_expression: . identifier "=" operation_expression
   14                      | . identifier "=" function_declaration_statement
   15                      | . identifier "=" object_literal
   50 variable_declaration_statement: "var" . variable_declaration_list
   51 variable_declaration_list: . variable_declaration_list "," variable_declaration
   52                          | . variable_declaration
   53 variable_declaration: . assignment_expression
   54                     | . "IDENTIFIER"
   67 identifier: . identifier DOT identifier
   68           | . identifier OPEN_BRACKET "INTEGER" CLOSE_BRACKET
   69           | . identifier OPEN_BRACKET "STRING" CLOSE_BRACKET
   70           | . "IDENTIFIER"

    "IDENTIFIER"  shift, and go to state 30

    assignment_expression      go to state 31
    variable_declaration_list  go to state 32
    variable_declaration       go to state 33
    identifier                 go to state 34


State 9

   55 function_declaration_statement: "function" . "IDENTIFIER" OPEN_PARENTHESIS parameters_list CLOSE_PARENTHESIS function_body
   56                               | "function" . OPEN_PARENTHESIS parameters_list CLOSE_PARENTHESIS function_body

    "IDENTIFIER"      shift, and go to state 35
    OPEN_PARENTHESIS  shift, and go to state 36


State 10

   23 operation_expression: . OPEN_PARENTHESIS operation_expression CLOSE_PARENTHESIS
   24                     | . "INTEGER"
   25                     | . "FLOAT"
   26                     | . "BOOLEAN"
   27                     | . "STRING"
   28                     | . operation_expression AND operation_expression
   29                     | . operation_expression OR operation_expression
   30                     | . operation_expression LESS_THAN operation_expression
   31                     | . operation_expression LESS_EQUAL_THAN operation_expression
   32                     | . operation_expression GREATER_THAN operation_expression
   33                     | . operation_expression GREATER_EQUAL_THAN operation_expression
   34                     | . operation_expression EQUAL operation_expression
   35                     | . operation_expression NOT_EQUAL operation_expression
   36                     | . operation_expression PLUS operation_expression
   37                     | . operation_expression MINUS operation_expression
   38                     | . operation_expression ASTERISK operation_expression
   39                     | . operation_expression SLASH operation_expression
   40                     | . NOT operation_expression
   41                     | . INC operation_expression
   42                     | . DEC operation_expression
   43                     | . function_call_expression
   44                     | . identifier
   45 function_call_expression: . identifier OPEN_PARENTHESIS arguments_list CLOSE_PARENTHESIS
   61 return_statement: "return" . operation_expression
   67 identifier: . identifier DOT identifier
   68           | . identifier OPEN_BRACKET "INTEGER" CLOSE_BRACKET
   69           | . identifier OPEN_BRACKET "STRING" CLOSE_BRACKET
   70           | . "IDENTIFIER"

    "INTEGER"         shift, and go to state 1
    "FLOAT"           shift, and go to state 2
    "BOOLEAN"         shift, and go to state 3
    "STRING"          shift, and go to state 4
    "IDENTIFIER"      shift, and go to state 5
    INC               shift, and go to state 11
    DEC               shift, and go to state 12
    NOT               shift, and go to state 13
    OPEN_PARENTHESIS  shift, and go to state 14

    operation_expression      go to state 37
    function_call_expression  go to state 21
    identifier                go to state 38


State 11

   23 operation_expression: . OPEN_PARENTHESIS operation_expression CLOSE_PARENTHESIS
   24                     | . "INTEGER"
   25                     | . "FLOAT"
   26                     | . "BOOLEAN"
   27                     | . "STRING"
   28                     | . operation_expression AND operation_expression
   29                     | . operation_expression OR operation_expression
   30                     | . operation_expression LESS_THAN operation_expression
   31                     | . operation_expression LESS_EQUAL_THAN operation_expression
   32                     | . operation_expression GREATER_THAN operation_expression
   33                     | . operation_expression GREATER_EQUAL_THAN operation_expression
   34                     | . operation_expression EQUAL operation_expression
   35                     | . operation_expression NOT_EQUAL operation_expression
   36                     | . operation_expression PLUS operation_expression
   37                     | . operation_expression MINUS operation_expression
   38                     | . operation_expression ASTERISK operation_expression
   39                     | . operation_expression SLASH operation_expression
   40                     | . NOT operation_expression
   41                     | . INC operation_expression
   41                     | INC . operation_expression
   42                     | . DEC operation_expression
   43                     | . function_call_expression
   44                     | . identifier
   45 function_call_expression: . identifier OPEN_PARENTHESIS arguments_list CLOSE_PARENTHESIS
   67 identifier: . identifier DOT identifier
   68           | . identifier OPEN_BRACKET "INTEGER" CLOSE_BRACKET
   69           | . identifier OPEN_BRACKET "STRING" CLOSE_BRACKET
   70           | . "IDENTIFIER"

    "INTEGER"         shift, and go to state 1
    "FLOAT"           shift, and go to state 2
    "BOOLEAN"         shift, and go to state 3
    "STRING"          shift, and go to state 4
    "IDENTIFIER"      shift, and go to state 5
    INC               shift, and go to state 11
    DEC               shift, and go to state 12
    NOT               shift, and go to state 13
    OPEN_PARENTHESIS  shift, and go to state 14

    operation_expression      go to state 39
    function_call_expression  go to state 21
    identifier                go to state 38


State 12

   23 operation_expression: . OPEN_PARENTHESIS operation_expression CLOSE_PARENTHESIS
   24                     | . "INTEGER"
   25                     | . "FLOAT"
   26                     | . "BOOLEAN"
   27                     | . "STRING"
   28                     | . operation_expression AND operation_expression
   29                     | . operation_expression OR operation_expression
   30                     | . operation_expression LESS_THAN operation_expression
   31                     | . operation_expression LESS_EQUAL_THAN operation_expression
   32                     | . operation_expression GREATER_THAN operation_expression
   33                     | . operation_expression GREATER_EQUAL_THAN operation_expression
   34                     | . operation_expression EQUAL operation_expression
   35                     | . operation_expression NOT_EQUAL operation_expression
   36                     | . operation_expression PLUS operation_expression
   37                     | . operation_expression MINUS operation_expression
   38                     | . operation_expression ASTERISK operation_expression
   39                     | . operation_expression SLASH operation_expression
   40                     | . NOT operation_expression
   41                     | . INC operation_expression
   42                     | . DEC operation_expression
   42                     | DEC . operation_expression
   43                     | . function_call_expression
   44                     | . identifier
   45 function_call_expression: . identifier OPEN_PARENTHESIS arguments_list CLOSE_PARENTHESIS
   67 identifier: . identifier DOT identifier
   68           | . identifier OPEN_BRACKET "INTEGER" CLOSE_BRACKET
   69           | . identifier OPEN_BRACKET "STRING" CLOSE_BRACKET
   70           | . "IDENTIFIER"

    "INTEGER"         shift, and go to state 1
    "FLOAT"           shift, and go to state 2
    "BOOLEAN"         shift, and go to state 3
    "STRING"          shift, and go to state 4
    "IDENTIFIER"      shift, and go to state 5
    INC               shift, and go to state 11
    DEC               shift, and go to state 12
    NOT               shift, and go to state 13
    OPEN_PARENTHESIS  shift, and go to state 14

    operation_expression      go to state 40
    function_call_expression  go to state 21
    identifier                go to state 38


State 13

   23 operation_expression: . OPEN_PARENTHESIS operation_expression CLOSE_PARENTHESIS
   24                     | . "INTEGER"
   25                     | . "FLOAT"
   26                     | . "BOOLEAN"
   27                     | . "STRING"
   28                     | . operation_expression AND operation_expression
   29                     | . operation_expression OR operation_expression
   30                     | . operation_expression LESS_THAN operation_expression
   31                     | . operation_expression LESS_EQUAL_THAN operation_expression
   32                     | . operation_expression GREATER_THAN operation_expression
   33                     | . operation_expression GREATER_EQUAL_THAN operation_expression
   34                     | . operation_expression EQUAL operation_expression
   35                     | . operation_expression NOT_EQUAL operation_expression
   36                     | . operation_expression PLUS operation_expression
   37                     | . operation_expression MINUS operation_expression
   38                     | . operation_expression ASTERISK operation_expression
   39                     | . operation_expression SLASH operation_expression
   40                     | . NOT operation_expression
   40                     | NOT . operation_expression
   41                     | . INC operation_expression
   42                     | . DEC operation_expression
   43                     | . function_call_expression
   44                     | . identifier
   45 function_call_expression: . identifier OPEN_PARENTHESIS arguments_list CLOSE_PARENTHESIS
   67 identifier: . identifier DOT identifier
   68           | . identifier OPEN_BRACKET "INTEGER" CLOSE_BRACKET
   69           | . identifier OPEN_BRACKET "STRING" CLOSE_BRACKET
   70           | . "IDENTIFIER"

    "INTEGER"         shift, and go to state 1
    "FLOAT"           shift, and go to state 2
    "BOOLEAN"         shift, and go to state 3
    "STRING"          shift, and go to state 4
    "IDENTIFIER"      shift, and go to state 5
    INC               shift, and go to state 11
    DEC               shift, and go to state 12
    NOT               shift, and go to state 13
    OPEN_PARENTHESIS  shift, and go to state 14

    operation_expression      go to state 41
    function_call_expression  go to state 21
    identifier                go to state 38


State 14

   23 operation_expression: . OPEN_PARENTHESIS operation_expression CLOSE_PARENTHESIS
   23                     | OPEN_PARENTHESIS . operation_expression CLOSE_PARENTHESIS
   24                     | . "INTEGER"
   25                     | . "FLOAT"
   26                     | . "BOOLEAN"
   27                     | . "STRING"
   28                     | . operation_expression AND operation_expression
   29                     | . operation_expression OR operation_expression
   30                     | . operation_expression LESS_THAN operation_expression
   31                     | . operation_expression LESS_EQUAL_THAN operation_expression
   32                     | . operation_expression GREATER_THAN operation_expression
   33                     | . operation_expression GREATER_EQUAL_THAN operation_expression
   34                     | . operation_expression EQUAL operation_expression
   35                     | . operation_expression NOT_EQUAL operation_expression
   36                     | . operation_expression PLUS operation_expression
   37                     | . operation_expression MINUS operation_expression
   38                     | . operation_expression ASTERISK operation_expression
   39                     | . operation_expression SLASH operation_expression
   40                     | . NOT operation_expression
   41                     | . INC operation_expression
   42                     | . DEC operation_expression
   43                     | . function_call_expression
   44                     | . identifier
   45 function_call_expression: . identifier OPEN_PARENTHESIS arguments_list CLOSE_PARENTHESIS
   67 identifier: . identifier DOT identifier
   68           | . identifier OPEN_BRACKET "INTEGER" CLOSE_BRACKET
   69           | . identifier OPEN_BRACKET "STRING" CLOSE_BRACKET
   70           | . "IDENTIFIER"

    "INTEGER"         shift, and go to state 1
    "FLOAT"           shift, and go to state 2
    "BOOLEAN"         shift, and go to state 3
    "STRING"          shift, and go to state 4
    "IDENTIFIER"      shift, and go to state 5
    INC               shift, and go to state 11
    DEC               shift, and go to state 12
    NOT               shift, and go to state 13
    OPEN_PARENTHESIS  shift, and go to state 14

    operation_expression      go to state 42
    function_call_expression  go to state 21
    identifier                go to state 38


State 15

    0 $accept: program . $end

    $end  shift, and go to state 43


State 16

    1 program: statements_list .  [$end]
    3 statements_list: statements_list . statement
    5 statement: . expression_statement
    6          | . variable_declaration_statement
    7          | . function_declaration_statement
    8          | . return_statement
    9          | . iteration_statement
   10          | . conditional_statement
   11 expression_statement: . assignment_expression
   12                     | . operation_expression
   13 assignment_expression: . identifier "=" operation_expression
   14                      | . identifier "=" function_declaration_statement
   15                      | . identifier "=" object_literal
   23 operation_expression: . OPEN_PARENTHESIS operation_expression CLOSE_PARENTHESIS
   24                     | . "INTEGER"
   25                     | . "FLOAT"
   26                     | . "BOOLEAN"
   27                     | . "STRING"
   28                     | . operation_expression AND operation_expression
   29                     | . operation_expression OR operation_expression
   30                     | . operation_expression LESS_THAN operation_expression
   31                     | . operation_expression LESS_EQUAL_THAN operation_expression
   32                     | . operation_expression GREATER_THAN operation_expression
   33                     | . operation_expression GREATER_EQUAL_THAN operation_expression
   34                     | . operation_expression EQUAL operation_expression
   35                     | . operation_expression NOT_EQUAL operation_expression
   36                     | . operation_expression PLUS operation_expression
   37                     | . operation_expression MINUS operation_expression
   38                     | . operation_expression ASTERISK operation_expression
   39                     | . operation_expression SLASH operation_expression
   40                     | . NOT operation_expression
   41                     | . INC operation_expression
   42                     | . DEC operation_expression
   43                     | . function_call_expression
   44                     | . identifier
   45 function_call_expression: . identifier OPEN_PARENTHESIS arguments_list CLOSE_PARENTHESIS
   50 variable_declaration_statement: . "var" variable_declaration_list
   55 function_declaration_statement: . "function" "IDENTIFIER" OPEN_PARENTHESIS parameters_list CLOSE_PARENTHESIS function_body
   56                               | . "function" OPEN_PARENTHESIS parameters_list CLOSE_PARENTHESIS function_body
   61 return_statement: . "return" operation_expression
   62 iteration_statement: . "while" OPEN_PARENTHESIS operation_expression CLOSE_PARENTHESIS block
   63 conditional_statement: . "if" OPEN_PARENTHESIS operation_expression CLOSE_PARENTHESIS block
   64                      | . "if" OPEN_PARENTHESIS operation_expression CLOSE_PARENTHESIS block ELSE block
   67 identifier: . identifier DOT identifier
   68           | . identifier OPEN_BRACKET "INTEGER" CLOSE_BRACKET
   69           | . identifier OPEN_BRACKET "STRING" CLOSE_BRACKET
   70           | . "IDENTIFIER"

    "INTEGER"         shift, and go to state 1
    "FLOAT"           shift, and go to state 2
    "BOOLEAN"         shift, and go to state 3
    "STRING"          shift, and go to state 4
    "IDENTIFIER"      shift, and go to state 5
    "if"              shift, and go to state 6
    "while"           shift, and go to state 7
    "var"             shift, and go to state 8
    "function"        shift, and go to state 9
    "return"          shift, and go to state 10
    INC               shift, and go to state 11
    DEC               shift, and go to state 12
    NOT               shift, and go to state 13
    OPEN_PARENTHESIS  shift, and go to state 14

    $default  reduce using rule 1 (program)

    statement                       go to state 44
    expression_statement            go to state 18
    assignment_expression           go to state 19
    operation_expression            go to state 20
    function_call_expression        go to state 21
    variable_declaration_statement  go to state 22
    function_declaration_statement  go to state 23
    return_statement                go to state 24
    iteration_statement             go to state 25
    conditional_statement           go to state 26
    identifier                      go to state 27


State 17

    4 statements_list: statement .

    $default  reduce using rule 4 (statements_list)


State 18

    5 statement: expression_statement .

    $default  reduce using rule 5 (statement)


State 19

   11 expression_statement: assignment_expression .

    $default  reduce using rule 11 (expression_statement)


State 20
